修改页脚显示

--- a/templates/base.html
+++ b/templates/base.html
@@ -91,14 +91,14 @@
 </div>
 
 <!-- footer start-->
-<div class="footer"> 
+<footer class="footer">
+<div class="container"> 
 <hr>
-<footer> 
 <p style="text-align: center; font-size: 13px;">
 © 2018 mmanager
 </p> 
-</footer> 
 </div>
+</footer>
 <!-- footer end-->
 
 </body>
