--- a/templates/my_account.html
+++ b/templates/my_account.html
@@ -44,7 +44,7 @@
 
     <tr>
         <td colspan="12" data-column="0">
-            <span class="table_count">Displaying 1 items</span>
+            <span class="table_count">Displaying 1 / 1 items</span>
         </td>
     </tr>
     <tr class="active">
@@ -78,7 +78,7 @@
     </tr>
     <tr>
         <td colspan="12" data-column="0">
-            <span class="table_count">Displaying 1 items</span>
+            <span class="table_count">Displaying 1 /1 items</span>
         </td>
     </tr>
 </table>
