--- a/templates/job_list.html
+++ b/templates/job_list.html
@@ -43,7 +43,7 @@
 </caption>
     <tr>
         <td colspan="12" data-column="0">
-            <span class="table_count">Displaying {{ job_count }} items</span>
+            <span class="table_count">Displaying {{ curent_page_size }} / {{ job_list.paginator.count }} items</span>
         </td>
     </tr>
     <tr class="active">
@@ -83,7 +83,7 @@
     {% endfor %}
     <tr>
         <td colspan="12" data-column="0">
-            <span class="table_count">Displaying {{ job_count }} items</span>
+            <span class="table_count">Displaying {{ curent_page_size }} / {{ job_list.paginator.count }} items</span>
         </td>
     </tr>
 </table>
