--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -43,7 +43,7 @@
 </caption>
     <tr>
         <td colspan="12" data-column="0">
-            <span class="table_count">Displaying 10 / {{ user_list_count }} items</span>
+            <span class="table_count">Displaying {{ curent_page_size }} / {{ user_list.paginator.count }} items</span>
         </td>
     </tr>
     <tr class="active">
@@ -79,7 +79,7 @@
     {% endfor %}
     <tr>
         <td colspan="12" data-column="0">
-            <span class="table_count">Displaying 10 / {{ user_list_count }} items</span>
+            <span class="table_count">Displaying {{ curent_page_size }} / {{ user_list.paginator.count }} items</span>
         </td>
     </tr>
 </table>
