--- a/templates/job_list.html
+++ b/templates/job_list.html
@@ -67,7 +67,7 @@
 
           <!-- Split button -->
           <div class="btn-group">
-            <a type="button" class="btn btn-default btn-sm" href="javascript:;" onclick="jenkins_job_opt('{{job.host_ip}}','{{job.host_port}}','{{job.name}}','build')">Build Job</a>
+            <a type="button" class="btn btn-default btn-sm" href="javascript:;" onclick="jenkins_job_opt('{{job.host}}','{{job.host_port_api}}','{{job.name}}','build')">Build Job</a>
             <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
             </button>
