--- a/templates/tail_log.html
+++ b/templates/tail_log.html
@@ -54,7 +54,7 @@ $(function () {
     });
 </script>
 
-<h5><code style="font-size: 13px;">{{name}}@{{server_ip}}</code></h5>
+<h5><code style="font-size: 13px;">{{name}}@{{host}}</code></h5>
 <pre id="messagecontainer" style="background: white;height:500px; overflow:auto">
 </pre>
 {% endblock %}
