--- a/templates/process_list.html
+++ b/templates/process_list.html
@@ -69,7 +69,7 @@
  
           <!-- Split button -->
           <div class="btn-group">
-            <a type="button" class="btn btn-default btn-sm" href="javascript:;" onclick="process_opt('{{process.host_ip}}','{{process.host_port}}','{{process.name}}','restart')">Restart</a>
+            <a type="button" class="btn btn-default btn-sm" href="javascript:;" onclick="process_opt('{{process.host}}','{{process.host_port}}','{{process.name}}','restart')">Restart</a>
             <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="caret"></span>
             </button>
@@ -77,7 +77,7 @@
               <li><a href="javascript:;" onclick="process_opt('{{process.host}}','{{process.host_port}}','{{process.name}}','start')">Start Process</a></li>
               <li><a href="javascript:;" onclick="process_opt('{{process.host}}','{{process.host_port}}','{{process.name}}','stop')">Stop Process</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="process_log?server_ip={{process.host}}&server_port={{process.host_port}}&process_name={{process.name}}" target="_blank">Tail Log</a></li>
+              <li><a href="process_log?host={{process.host}}&host_port={{process.host_port}}&process_name={{process.name}}" target="_blank">Tail Log</a></li>
             </ul>
           </div>
         </td>
