--- a/templates/user_create.html
+++ b/templates/user_create.html
@@ -24,10 +24,10 @@
               <p><strong>Email</strong></p>
               <input type="text" name="email" class="form-control" placeholder="" autofocus>
               </br>
-              <p><strong>Is Superuser </strong><span class="fa fa-asterisk"></span></p>
-              <select class="form-control" name="is_superuser">
-                <option>True</option>
-                <option  selected="selected">False</option>
+              <p><strong>Role </strong><span class="fa fa-asterisk"></span></p>
+              <select class="form-control" name="role">
+                <option  selected="selected">user</option>
+                <option>admin</option>
               </select>
               </br>
               <p><strong>Password </strong><span class="fa fa-asterisk"></span></p>
