--- a/templates/server_list.html
+++ b/templates/server_list.html
@@ -29,7 +29,7 @@
     <input type="text" class="form-control" name="filter_keyword" value="{{filter_keyword}}" placeholder="">
   </div>
   <button type="submit" class="btn btn-default"><span class="fa fa-filter"></span> Filter</button>
-  <button class="btn btn-default"><a class="fa fa-plus" href="/server/server_create"> Create Server</a></button>
+  <button class="btn btn-default"><a class="fa fa-plus" href="/server/server_create" style="text-decoration:none; color: inherit;"> Create Server</a></button>
   <div class="btn-group">
   <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     More Actions <span class="caret"></span>
