--- a/templates/user_list.html
+++ b/templates/user_list.html
@@ -26,10 +26,10 @@
           <option>Description</option>
         </select>
     </p>
-    <input type="text" class="form-control" name="filter_keyword" value="{{filter_keyword}}" placeholder="">
+    <input type="text" class="form-control" name="filter_keyword" value="{{filter_keyword}}">
   </div>
   <button type="submit" class="btn btn-default"><span class="fa fa-filter"></span> Filter</button>
-  <button class="btn btn-default"><a class="fa fa-plus" href="/account/user_create"> Create User</a></button>
+  <button class="btn btn-default"><a class="fa fa-plus" href="/account/user_create" style="text-decoration:none; color: inherit;"> Create User</a></button>
   <div class="btn-group">
   <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     More Actions <span class="caret"></span>
