修改文本浏览方式

--- a/templates/text_viewer.html
+++ b/templates/text_viewer.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="col-md-12">
-  <form class="form-inline" style="float: right;" action="/textviewer/" method="post">
+  <form class="form-inline" style="float: right;" action="/filemanager/text_viewer/" method="post">
    {% csrf_token %}
     <div class="form-group">
       <p class="form-control-static">
